# messagepack

./: .gitignore  .travis.yml  CHANGELOG  Data-MessagePack-Spec.html  Data-MessagePack.html  LICENSE  README.md  doc-index.html  index-frames.html  index.html  messagepack.cabal  mini_Data-MessagePack-Spec.html  mini_Data-MessagePack.html  msgpack.org.md  stack.yaml
Data/: MessagePack.hs
Data/MessagePack/: Spec.hs
tests/: Main.hs
