name:                messagepack
version:             0.1.0.0
synopsis:            Message Pack serializer deserializer
description:         Serialize instance for Message Pack Object
homepage:            https://github.com/rsetti/messagepack
license:             MIT
license-file:        LICENSE
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
copyright:           (c) 2014 Rodrigo Setti
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules  : Data.MessagePack
  default-language : Haskell2010
  build-depends    : base       == 4.*
                   , attoparsec == 0.12.*
                   , bytestring == 0.10.*
                   , cereal     == 0.4.*
                   , containers == 0.5.*
                   , text       == 1.*

test-suite messagepack-tests
     type             : exitcode-stdio-1.0
     hs-source-dirs   : tests
     main-is          : Main.hs
     default-language : Haskell2010
     build-depends    : base                       == 4.*
                      , QuickCheck                 == 2.*
                      , bytestring                 == 0.10.*
                      , cereal                     == 0.4.*
                      , containers                 == 0.5.*
                      , test-framework             == 0.8.*
                      , test-framework-quickcheck2 == 0.3.*
                      , test-framework-th          == 0.2.*
                      , text                       == 1.*
                      , messagepack

